--- a/gomoku-server/src/components/Board.css
+++ b/gomoku-server/src/components/Board.css
@@ -1,6 +1,8 @@
 .board-container {
   position: relative;
   display: inline-block;
+  align-self: center;
+  width: fit-content;
 }
 
 /* Grid lines */
